# IGEM-sama

./: CHANGELOG.md  README.md  pyproject.toml
ZerolanLiveRobot-2.3.0/: Dockerfile  README.md  bot.py  config.igem-sama.yaml  config.py  demo.py  desktop_pet.py  docker-compose.yaml  requirements.txt  simulate.py  simulate_web.py  start_igem_sama.bat  start_igem_sama.sh
ZerolanLiveRobot-2.3.0/agent/: custom_agent.py
ZerolanLiveRobot-2.3.0/agent/tool/: bio_workflow_tool.py  doc_hub_tool.py  igem_knowledge.py  interactive.py  meeting_tool.py  task_board_tool.py
ZerolanLiveRobot-2.3.0/analytics/: __init__.py  collector.py  dashboard.py
ZerolanLiveRobot-2.3.0/autonomous/: __init__.py  behavior.py
ZerolanLiveRobot-2.3.0/character/: config.py
ZerolanLiveRobot-2.3.0/common/: rate_limiter.py
ZerolanLiveRobot-2.3.0/common/concurrent/: circuit_breaker.py
ZerolanLiveRobot-2.3.0/common/io/: file_sys.py
ZerolanLiveRobot-2.3.0/common/utils/: enum_util.py
ZerolanLiveRobot-2.3.0/demo/: core.py  mock_llm.py  server.py  video_stream.py
ZerolanLiveRobot-2.3.0/demo/templates/: demo.html
ZerolanLiveRobot-2.3.0/devices/: headless.py  keyboard.py  speaker.py
ZerolanLiveRobot-2.3.0/devices/screen/: base_screen.py  linux_screen.py
ZerolanLiveRobot-2.3.0/emotion/: __init__.py  expression_map.py  tracker.py
ZerolanLiveRobot-2.3.0/event/: event_data.py  event_emitter.py  registry.py
ZerolanLiveRobot-2.3.0/features/: __init__.py  bio_workflow.py  doc_hub.py  meeting_tracker.py  paths.py  store.py  task_board.py
ZerolanLiveRobot-2.3.0/framework/: context.py
ZerolanLiveRobot-2.3.0/game_loop/: __init__.py  commentary.py  config.py  game_action.py  game_decision.py  game_perception.py
ZerolanLiveRobot-2.3.0/knowledge_base/: __init__.py  config.py  ingest.py  kb_pipeline.py  loader.py  models.py
ZerolanLiveRobot-2.3.0/knowledge_base/docs/: README.md
ZerolanLiveRobot-2.3.0/manager/: llm_prompt_manager.py
ZerolanLiveRobot-2.3.0/memory/: __init__.py  long_term.py  short_term.py
ZerolanLiveRobot-2.3.0/panel/: __init__.py  frontend.py  server.py
ZerolanLiveRobot-2.3.0/perception/: __init__.py  config.py  event_handler.py  perception_context.py  visual_loop.py
ZerolanLiveRobot-2.3.0/personality/: __init__.py  config.py  personality_state.py  prompt_builder.py
ZerolanLiveRobot-2.3.0/pipeline/base/: base_sync.py  config.py
ZerolanLiveRobot-2.3.0/pipeline/llm/: config.py  llm_sync.py
ZerolanLiveRobot-2.3.0/pipeline/voice/: __init__.py  config.py  train_cli.py  voice_converter.py  voice_pipeline.py
ZerolanLiveRobot-2.3.0/services/live2d/: config.py  lip_sync_interpolator.py  live2d_canvas.py  live2d_viewer.py  viseme_engine.py  wave_handler.py
ZerolanLiveRobot-2.3.0/services/obs/: overlay.py
ZerolanLiveRobot-2.3.0/services/playground/res/: res_server.py
ZerolanLiveRobot-2.3.0/services/qqbot/: config.py  napcat.py
ZerolanLiveRobot-2.3.0/tests/pipeline/: test_llm.py
zerolan-core-1.4/: .gitignore  README.md  config.template.yaml  starter.py
zerolan-core-1.4/asr/: app.py
zerolan-core-1.4/asr/kotoba_whisper_2/: config.py  model.py  pyproject.toml  requirements.txt
zerolan-core-1.4/asr/paraformer/: config.py  model.py  pyproject.toml
zerolan-core-1.4/common/: abs_app.py  abs_model.py  decorator.py
zerolan-core-1.4/database/milvus/: config.py  milvus.py  pyproject.toml
zerolan-core-1.4/img_cap/: app.py
zerolan-core-1.4/img_cap/blip/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/: app.py
zerolan-core-1.4/llm/chatglm3/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/deepseek/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/glm4/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/ollama/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/qwen/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/shisa/: config.py  model.py  pyproject.toml
zerolan-core-1.4/llm/yi/: config.py  model.py  pyproject.toml
zerolan-core-1.4/ocr/: app.py
zerolan-core-1.4/ocr/paddle/: config.py  model.py  pyproject.toml
zerolan-core-1.4/tts/: app.py
zerolan-core-1.4/tts/gpt_sovits/: Dockerfile  model.py
zerolan-core-1.4/utils/: audio_util.py  file_util.py  web_util.py
zerolan-core-1.4/vid_cap/: app.py
zerolan-core-1.4/vid_cap/hitea/: config.py  model.py  pyproject.toml
zerolan-core-1.4/vla/showui/: app.py  config.py  model.py  pyproject.toml  requirements.txt
zerolan-data-1.5.0/: .gitignore  README.md  pyproject.toml
zerolan-data-1.5.0/docs/: doc_en.md
zerolan-data-1.5.0/src/zerolan/data/data/: danmaku.py  prompt.py  state.py
zerolan-data-1.5.0/src/zerolan/data/generator/: doc_gen.py
zerolan-data-1.5.0/src/zerolan/data/pipeline/: abs_data.py  asr.py  img_cap.py  llm.py  milvus.py  ocr.py  tts.py  vid_cap.py  vla.py
zerolan-data-1.5.0/src/zerolan/data/protocol/: protocol.py
