[project]
name = "kotoba-whisper-2"
version = "0.1.0"
description = "https://huggingface.co/kotoba-tech/kotoba-whisper-v2.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "loguru>=0.7.3",
    "protobuf>=6.33.4",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "zerolan-data",
]

[tool.uv.sources]
zerolan-data = { git = "https://github.com/AkagawaTsurunaki/zerolan-data.git", rev = "1.5.0" }

[tool.setuptools]
packages = []
