[project]
name = "blip"
version = "0.1.0"
description = "https://huggingface.co/Salesforce/blip-image-captioning-large"
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json==0.6.7",
    "flask==3.0.3",
    "loguru==0.7.2",
    "numpy==1.26.4",
    "pillow==10.4.0",
    "torch==2.3.1",
    "transformers==4.43.3",
    "zerolan-data",
]

[tool.uv.sources]
zerolan-data = { git = "https://github.com/AkagawaTsurunaki/zerolan-data.git", rev = "1.5.0" }

[tool.setuptools]
packages = []
