[project]
name = "ollama"
version = "0.1.0"
description = "https://github.com/ollama/ollama/blob/main/docs/api.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "zerolan-data",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
zerolan-data = { git = "https://github.com/AkagawaTsurunaki/zerolan-data.git", rev = "1.5.0" }
