[project]
name = "paddle"
version = "0.1.0"
description = "https://gitee.com/paddlepaddle/PaddleOCR"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "loguru>=0.7.3",
    "paddleocr>=2.10.0",
    "paddlepaddle-gpu==3.2.2",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
    "zerolan-data",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle" }
zerolan-data = { git = "https://github.com/AkagawaTsurunaki/zerolan-data.git", rev = "1.5.0" }

[tool.setuptools]
packages = []
